# ffmpeg_tutorials

./: .gitignore  CMakeLists.txt  LICENSE  README.md
basic_algorithms/: CMakeLists.txt  introducation_to_algorithms.md
basic_algorithms/crc_impl/: crc_model.c  crc_model.h  crc_test.c
cpp_reference/: CMakeLists.txt  allocator_test.cpp  lvalue_rvalue_teset.cpp  shared_ptr_test.cpp  unique_ptr_test.cpp  weak_ptr_test.cpp
ffmpeg_examples/: CMakeLists.txt  animate_webp_encoder.c  decode_video.c  encode_audio.c  encode_mp3_to_video.c  encode_video.c  filtering_video.c  hw_decode.c  metadata.c  muxing.c  remuxing.c  scaling_video.c  transcode_aac.c  transcoding.c
image_proc_version/opencv/: CMakeLists.txt
image_proc_version/opencv/examples/core_functionality/: contrast_brightness.cpp  image_operations.cpp  scan_images.cpp
image_proc_version/opencv/examples/image_processing/: basic_drawing.cpp
image_proc_vision/: CMakeLists.txt
image_proc_vision/opencv/: hello_opencv.cpp
image_proc_vision/opencv/examples/core_functionality/: blending_two_images.cpp  mask_operations.cpp  mat.cpp
leetcode/: CMakeLists.txt  leetcode.cpp  leetcode.html
media_algorithms/: CMakeLists.txt
media_algorithms/pngquant/: pngquant.c  pngquant.h
media_spec_impl/: CMakeLists.txt
media_spec_impl/libpng/: png_to_png.c  pngtest.c
media_spec_impl/libwebp/: img2webp.c  webinfo.c
media_spec_impl/libwebp/imageio/: imageio_util.c  imageio_util.h
media_specifications/: bootstrap_documentation.html  bootstrap_starter_template.html  portable_network_graphics_specification.html
pointers_on_c/: 11_dynamic_memory_allocation.c  12_using_structures_and_pointers.c  CMakeLists.txt  sort.c  strdup.c  structures_and_unions.c
pointers_on_c/01_a_quick_start/: rearrange_characters.c
sfml/: CMakeLists.txt
sfml/examples/: SFMLTest.cpp
skia/: CMakeLists.txt
skia/include/codec/: SkCodec.h
skia/include/core/: SkMath.h  SkPostConfig.h  SkPreConfig.h  SkTypes.h
skia/include/private/: SkNoncopyable.h  SkTemplates.h
skia/src/codec/: SkCodec.cpp
skia/tests/: skia_test.cpp
skia/tools/flags/: CommandLineFlags.cpp  CommandLineFlags.h
soft_framework/design_patterns/: design_patterns.md
